@@ -17,6 +17,10 @@ Changes in behaviour not resulting in compilation errors
   wxINTERPOLATION_DEFAULT and not wxINTERPOLATION_GOOD as in 3.0 for
   consistency with OS X, call SetInterpolationQuality() explicitly if needed.
 
+- Calling wxYield() in wxMSW now generates wxEVT_IDLE events, just as in the
+  other ports, but this can be unexpected for the applications not expecting
+  their idle handlers to be called from inside wxYield().
+
 Changes in behaviour which may result in build errors
 -----------------------------------------------------
 
